chore: change links

--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -33,7 +33,7 @@
         "zh": "帮你背东西的工具",
         "en": "A tool help you recite things"
       },
-      "link": "https://github.com/Rotten-LKZ/recite-helper",
+      "link": "https://recite.lkzstudio.com/",
       "github": "https://github.com/Rotten-LKZ/recite-helper"
     },
     {
@@ -45,7 +45,7 @@
         "zh": "简单的表格生成器",
         "en": "An easy table generator"
       },
-      "link": "https://github.com/Rotten-LKZ/table-generator/",
+      "link": "https://table.lkzstudio.com/",
       "github": "https://github.com/Rotten-LKZ/table-generator"
     },
     {
@@ -57,7 +57,7 @@
         "zh": "时间表网页",
         "en": "A timeline generator"
       },
-      "link": "https://github.com/Rotten-LKZ/timeline/",
+      "link": "https://timeline.lkzstudio.com/",
       "github": "https://github.com/Rotten-LKZ/timeline"
     },
     {
